--- a/features.html
+++ b/features.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">PEABRAINS</h1>
+            <h1 class="logo">KUMO</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
